finished ramen.html

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -9,5 +9,35 @@
 
 <body>
     <h1>All Natural Ramen Noodles Recipe</h1>
+
+    <img src="../images/ramen.jpg" img="image of delicous ramen">
+
+    <h2>Description</h2>
+
+    <p>I've tried those make-your-own ramen seasoning recipes, but they taste
+         nothing like ramen in my opinion. This recipe hits the spot, and 
+         there is no MSG or artificial ingredients. </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>4 cups vegetable broth</li>
+        <li>4 cups water</li>
+        <li>1 tablespoon soy sauce</li>
+        <li>1 tablespoon seasame oil</li>
+        <li>1 tablespoon ground ginger</li>
+        <li>1 tablesoppon Siracha hot sauce</li>
+        <li>9 ounces soba noodles</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Combine broth, water, soy sauce, sesame oil, ginger, and hot sauce
+             in a pot; bring them to a boil</li>
+        <li>Add noodles to boiling broth mixture and cook until noodles are 
+            tender yet firm to the bite, 5 to 7 minutes</li>
+        <li>Transfer noodles to serving bowls and top with desired amount of 
+            broth</li>
+    </ol>
+    
 </body>
 </html>
