--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
 <body>
     <h1>Odin Recipes</h1>
-
-    <a href="recipes/ramen.html">All Natural Ramen Noodles Recipe</a>
+    <ul>
+        <li><a href="recipes/ramen.html">All Natural Ramen Noodles Recipe</a></li>
+        <li><a href="recipes/french-toast.html">Raspberry Cheesecake Stuffed French Toast</a></li>
+    </ul>
+    
 </body>
 </html>
