--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a href="recipes/ramen.html">All Natural Ramen Noodles Recipe</a></li>
         <li><a href="recipes/french-toast.html">Raspberry Cheesecake Stuffed French Toast</a></li>
+        <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
     </ul>
     
 </body>
