messing around with css

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Natural Ramen Noodles Recipe</title>
+    <link rel="stylesheet" href="../css/styles.css"/>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
          there is no MSG or artificial ingredients. </p>
 
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredients">
         <li>4 cups vegetable broth</li>
         <li>4 cups water</li>
         <li>1 tablespoon soy sauce</li>
@@ -30,7 +31,7 @@
     </ul>
 
     <h2>Steps</h2>
-    <ol>
+    <ol class="steps">
         <li>Combine broth, water, soy sauce, sesame oil, ginger, and hot sauce
              in a pot; bring them to a boil</li>
         <li>Add noodles to boiling broth mixture and cook until noodles are 
