--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Project: Recipe Assignment</title>
+
+    <link rel="stylesheet" href="css/styles.css"/>
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="links">
         <li><a href="recipes/ramen.html">All Natural Ramen Noodles Recipe</a></li>
         <li><a href="recipes/french-toast.html">Raspberry Cheesecake Stuffed French Toast</a></li>
         <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
