adding styles to lasagna and french toast

--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raspberry Cheesecake Stuffed French Toast</title>
+    <link rel="stylesheet" href="../css/styles.css"/>
 </head>
 <body>
     <h1>Raspberry Cheesecake Stuffed French Toast</h1>
@@ -19,7 +20,7 @@
         stuffed French toast recipes. </p>
 
     <h2>Ingredients</h2>
-    <ul>
+    <ul class = "ingredients">
         <li>1 cup milk</li>
         <li>2 tablespoons vanilla extract</li>
         <li>1 cup white sugar</li>
@@ -34,7 +35,7 @@
     </ul>
 
     <h2>Steps</h2>
-    <ol>
+    <ol class = "steps">
         <li>In a bowl, whisk milk, vanilla, sugar, and cinnamon into the beaten eggs until well blended. 
             Set aside</li>
         <li>In a separate bowl, cream together raspberry puree and cream cheese until smooth</li>
