--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World's Best Lasagna</title>
+    <link rel="stylesheet" href="../css/styles.css"/>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
         Restaurant quaility lasagna from home, made simple and easy!</p>
 
     <h2>Ingredients</h2>
-    <ul>
+    <ul class ="ingredients">
         <li>1 pound sweet Italian Sausage</li>
         <li>3/4 pound lean ground beef</li>
         <li>1/2 cup minced onion</li>
