--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -41,7 +41,7 @@
     </ul>
 
     <h2>Steps</h2>
-    <ol>
+    <ol class = "steps">
         <li>In a Dutch oven, cook sausage, ground beef, onion, and garlic over medium heat until well browned</li>
         <li>Stir in crushed tomatoes, tomato paste, tomato sauce, and water</li>
         <li>Season with sugar, basil, fennel seeds, Italian seasoning, 1 teaspoon salt, pepper, and 2 tablespoons parsley</li>
